# RAG-application

./: .gitignore  Dockerfile  custom_types.py  data_loader.py  main.py  pyproject.toml  render.yaml  vector_db.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatPanel.tsx  DocumentSidebar.tsx  MessageBubble.tsx  SourceChip.tsx  StatusBar.tsx  UploadPanel.tsx
frontend/src/hooks/: useChat.ts  useDocuments.ts
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
