[project]
name = "rag-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.0",
    "inngest>=0.5.18",
    "llama-index-core>=0.14.22",
    "llama-index-readers-file>=0.6.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.18.0",
    "uvicorn>=0.49.0",
]
